--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="_/css/styles.css">
-
-
-	<title>Roux Meetups</title>
+	<title>Grunt FTW</title>
 </head>
 <body>
-	<h1>Welcome</h1>
+	<h1>Hello</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, molestiae! In iure esse quis amet veritatis unde sit enim, ducimus nam, reiciendis officia. Temporibus culpa voluptatum officiis quos iure, numquam.</p>
 	<p>Sequi iste, odit cum delectus at officiis error ipsum dolorem. Cumque, sint, recusandae! Nihil beatae, nulla distinctio, asperiores earum voluptatem qui accusamus omnis. In excepturi nisi quis repellat nam cum.</p>
 	<p>Ex voluptates commodi quasi nostrum, cupiditate explicabo cumque quidem. Rerum ipsa, eius cum, nostrum ut voluptas libero laboriosam? Ad quaerat deserunt nulla totam accusamus ullam aliquam quidem similique iure blanditiis!</p>
 
 	<script src="_/js/script.js"></script>
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
